--- a/My First Python3 Notebook.ipynb
+++ b/My First Python3 Notebook.ipynb
@@ -22,10 +22,21 @@
     "colab": {
       "name": "My First Python3 Notebook.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/eric-huang5497/Math-152/blob/main/My%20First%20Python3%20Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -60,13 +71,21 @@
         "\n",
         "If you're reading this, you're off to a good start.  If you haven't gone through the following steps, please do these now!\n",
         "\n",
-        "1.  Officially *accept* this assignment through GitHub Classroom, by going to the [link here](https://classroom.github.com/a/m9fo5LLa).  This assignment is really a *repository* -- basically a directory on GitHub containing the files you need.  When you accept the assignment, GitHub will make a personal copy of this repository, just for you.  A message should tell you where your copy is, typically something like https://github.com/MartysClassroom/your-first-python-notebook-UserName.  \n",
+        "To complete this assignment, carry out the following five steps.\n",
         "\n",
-        "2.  Access Google Colab, by going to [Google's Colab site](https://colab.research.google.com/), while logged into your Google account.  Note that your UCSC account, accessed with Gold password, provides full access to Google services.  This includes Google Drive for storing files, etc.  \n",
+        "1.  Create a (free) account on GitHub, by going to http://github.com/.  GitHub is a commonly used site for collaborative software development.  You can find lots of GitHub tutorials online, but we will just be using the simplest features.\n",
         "\n",
-        "3.  Go into Colab, and go to File...Open Notebook.  Click GitHub from the menu bar.  Then put the github URL (like https://github.com/MartysClassroom/your-first-python-notebook-UserName) at the search line.  (Change UserName to your user name!)  It should locate this repository.  Note:  You'll have to give Google Colab access to your GitHub account, to load and save files to Github.  Please do so!\n",
+        "2.  Create a repository (like a directory) on your GitHub account.  I would call it something like \"Math 152\" or \"Python 4 Mathematics\".  Make this repository visible to the public.  You can use this to store all your programming notebooks this quarter.  You can make a separate repository for each assignment, or one repository for all assignments.\n",
         "\n",
-        "4.  Once the repository is selected, there should be a file called \"My First Python3 Notebook.ipynb\" there.  That's your personal copy of the notebook, and please click on that to open it.  As you're working on the notebook, go to \"File...Save a copy in GitHub\" to frequently save your work and update your GitHub repository.  Note that when you use Google Colab, you are \"borrowing\" Google's computers -- your work will not be automatically saved.  If you walk away for a few hours, your work might be lost!  So don't forget to save!  \n",
+        "3.  Access Google Colab by going to Google's Colab site (Links to an external site.) while logged into your Google account. Note that your UCSC account, accessed with Gold password, provides full access to Google services. This includes Google Drive for storing files, etc.\n",
+        "\n",
+        "4.  Open the notebook.  In Colab, and go to File...Open Notebook.  Click GitHub from the menu bar.  Enter the URL https://github.com/MartyWeissman/PythonForMathematics to find the class programming notebooks, and select the file \"My First Python3 Notebook.ipynb\".  This will open your assignment.  Note that when you use Google Colab, you are \"borrowing\" Google's computers -- your work will not be automatically saved. If you walk away for a few hours, your work might be lost! So don't forget to save!\n",
+        "\n",
+        "5.  Complete the four exercises in the notebook, using Google Colab.\n",
+        "\n",
+        "6.  Save your work, by going to File... Save a copy on GitHub.  You will have to provide Google Colab access to your GitHub account to save your work there.  But once you do this, you should be able to save the notebook to your personal GitHub repository.  Next time you load your work, make sure to load it from your repository rather than the class repository!  Save often!  You can also save copies on your Google Drive if you wish.\n",
+        "\n",
+        "5.  Submit the URL of your assignment on Canvas.  This URL should contain your personal repository name, as well as the notebook name (My First Python3 Notebook ipynb).  \n",
         "\n",
         "Your TA and instructor will be able to see your GitHub repository, in order to provide feedback on your work.  We will grade this assignment for completion."
       ]
@@ -94,11 +113,11 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "vqfo26dp-xLh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "vqfo26dp-xLh",
-        "outputId": "f4afa48b-1fd3-4889-9965-6bd64d1c655a"
+        "outputId": "b70c6a88-f4db-4e10-f602-f74a4821900a"
       },
       "source": [
         "2**91"
@@ -115,7 +134,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 2
         }
       ]
     },
@@ -155,7 +174,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "F2gfvRnlq1vw"
+        "id": "yQt0egeW4mBU"
       },
       "source": [
         "The second part of this message is false.\n",
@@ -175,14 +194,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MongTtL5rKnj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f8606b98-49b5-41f5-cc6b-edc41a2bce3d"
+        "id": "-jK9MZbH4o_f",
+        "outputId": "06403374-fd8f-48eb-e39e-3c17983b36e2"
       },
       "source": [
-        "43*47"
+        "43* 47"
       ],
       "execution_count": null,
       "outputs": [
@@ -196,7 +215,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 1
         }
       ]
     },
@@ -243,10 +262,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Z-WVaHZtr2tg"
+        "id": "flNpy0Rs4vjR"
       },
       "source": [
-        "none, *italics*, **bold**, ***both*** "
+        "none, *italics*, **bold**, ***both***"
       ]
     },
     {
@@ -315,10 +334,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5Q38FwRwtABS"
+        "id": "gLxzdUWN44_M"
       },
       "source": [
-        "## Eric Huang\n",
+        "##Eric Huang\n",
         "\n",
         "[Cat!](https://commons.wikimedia.org/wiki/File:Orange_tabby_cat_sitting_on_fallen_leaves-Hisashi-01A.jpg)"
       ]
@@ -406,7 +425,9 @@
         "\n",
         "If you have a reliable computer, but you do not have reliable internet access, then you might wish to use a Python installation on your own computer instead of Google Colab.  \n",
         "\n",
-        "Go to [Anaconda's home page](https://www.anaconda.com/) to install the individual edition of Anaconda on your computer.  This will include Python, a Jupyter notebook server, etc., with everything you'll need.  To start Python up, run the Anaconda navigator, and launch a Jupyter notebook.  This will open a tab in your web browser.  You can open and edit Python notebooks from this tab.  And you can upload your `ipynb` files directly from your computer to your GitHub repository when you're ready to share and submit files.  Let us know if you need help with this process!  "
+        "Go to [Anaconda's home page](https://www.anaconda.com/) to install the individual edition of Anaconda on your computer.  This will include Python, a Jupyter notebook server, etc., with everything you'll need.  To start Python up, run the Anaconda navigator, and launch a Jupyter notebook.  This will open a tab in your web browser.  You can download the notebook from https://github.com/MartyWeissman/PythonForMathematics.  In fact, Github makes it a bit hard to download individual files, but click on the file you want (the ipynb file).  Then click \"raw\", and you'll see a big page with lots of code.  Save this on your computer with an ipynb extension (not .txt) and you've got it.  \n",
+        "\n",
+        "You can open and edit Python notebooks from this tab.  And you can upload your `ipynb` files directly from your computer to your GitHub repository when you're ready to share and submit files.  Let us know if you need help with this process!  "
       ]
     },
     {
