--- a/P4M Notebook1.ipynb
+++ b/P4M Notebook1.ipynb
@@ -2214,7 +2214,7 @@
         "\n",
         "3. To test if an integer n is a multiple of 7 but not a multiple of 11, I would write `(n%7 == 0) and (n%11 != 0)`.\n",
         "\n",
-        "4. `not` takes precedent over `and` and `or`, which are evaluated left to right.\n",
+        "4. `not` takes precedent over `and`, which takes precedent over `or` as demonstrated below.\n",
         "\n",
         "5. We can write `A xor B = not (A and B) and (A or B)`."
       ]
@@ -2282,12 +2282,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xv2Uyb9CF6lh",
-        "outputId": "856de1f6-7811-4f10-cf3b-66c656eaf8a8"
+        "outputId": "f399d954-41cd-4ba3-842d-d593feb51e93"
       },
       "source": [
         "False and False or True"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2299,23 +2299,23 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 1
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "q5n3OhVA5H3S",
+        "outputId": "4a492cca-b467-456a-89aa-a62d7299a767",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "AGrM4Zy1GCm5",
-        "outputId": "bd02c3c5-662f-48a1-e454-c31f8a92d76d"
+        }
       },
       "source": [
-        " False and (False or True)"
+        "False and (False or True)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2327,7 +2327,63 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AGrM4Zy1GCm5",
+        "outputId": "0caf7f64-0bca-4b6a-ef17-b04bd2bc65eb"
+      },
+      "source": [
+        "True or False and False"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "keRxHxIx5LBO",
+        "outputId": "cad2009c-c54e-4b7b-d665-810e1cb02b3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "(True or False) and False"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
         }
       ]
     },
@@ -4091,9 +4147,9 @@
         "id": "PoGqUlqoU5yY"
       },
       "source": [
-        "#  Start your explorations here!"
+        ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -4103,6 +4159,15 @@
       },
       "source": [
         "Describe your findings here."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bav0b9Xovg2B"
+      },
+      "source": [
+        "We may analytically "
       ]
     },
     {
@@ -4124,7 +4189,7 @@
         "id": "cH0ApCftU5yY"
       },
       "source": [
-        "#  Approximate e here."
+        ""
       ],
       "execution_count": null,
       "outputs": []
