--- a/P4M Notebook1.ipynb
+++ b/P4M Notebook1.ipynb
@@ -2287,7 +2287,7 @@
       "source": [
         "False and False or True"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2307,15 +2307,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "q5n3OhVA5H3S",
-        "outputId": "4a492cca-b467-456a-89aa-a62d7299a767",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4a492cca-b467-456a-89aa-a62d7299a767"
       },
       "source": [
         "False and (False or True)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2343,7 +2343,7 @@
       "source": [
         "True or False and False"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2363,15 +2363,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "keRxHxIx5LBO",
-        "outputId": "cad2009c-c54e-4b7b-d665-810e1cb02b3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cad2009c-c54e-4b7b-d665-810e1cb02b3c"
       },
       "source": [
         "(True or False) and False"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3900,7 +3900,7 @@
       "source": [
         "### Solutions\n",
         "\n",
-        "1. When the divisor $d$ is positive, Python chooses the quotient and remainder such that the remainder lies in `range(0,d)`, and when the divisor is negative, Python chooses the quotient and remainder such that the remainder lies in `range(0,d,-1)`.\n",
+        "1. When the divisor $d$ is positive, Python chooses the quotient and remainder such that the remainder lies in the half-open interval $[0,d)$, and when the divisor is negative, Python chooses the quotient and remainder such that the remainder lies in $(d,0]$.\n",
         "\n",
         "2. $2^{90}$ has remainder 64 when divided by 91.\n",
         "\n",
@@ -3922,7 +3922,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d52ecd93-9d1f-41bc-e4c7-431c9f63e81c"
+        "outputId": "c44c1ffc-728c-48ea-e6cf-eca111438968"
       },
       "source": [
         "print(divmod(-75,4))\n",
@@ -3930,9 +3930,13 @@
         "print(divmod(-75,-4))\n",
         "print(divmod(75,-5))\n",
         "print(divmod(-75,5))\n",
-        "print(divmod(-75,-5))"
+        "print(divmod(-75,-5))\n",
+        "print(divmod(10.6,3))\n",
+        "print(divmod(10.6,-3))\n",
+        "print(divmod(10,3.3))\n",
+        "print(divmod(10,-3.3))"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -3942,7 +3946,11 @@
             "(18, -3)\n",
             "(-15, 0)\n",
             "(-15, 0)\n",
-            "(15, 0)\n"
+            "(15, 0)\n",
+            "(3.0, 1.5999999999999996)\n",
+            "(-4.0, -1.4000000000000004)\n",
+            "(3.0, 0.10000000000000053)\n",
+            "(-4.0, -3.1999999999999993)\n"
           ],
           "name": "stdout"
         }
@@ -4144,13 +4152,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PoGqUlqoU5yY"
+        "id": "PoGqUlqoU5yY",
+        "outputId": "a99e2cf0-6d73-4cdb-82b1-0052394ecf97",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "from math import sqrt\n",
+        "\n",
+        "N = 10**20\n",
+        "guess = 10**10 + 10**5\n",
+        "iterations = 10\n",
+        "for i in range(iterations):\n",
+        "  guess = (guess + N/guess)/2\n",
+        "  error = guess - sqrt(N)\n",
+        "  print(\"guess \", i+1,  \" = \", guess)\n",
+        "  print(\"error \", i+1,  \" = \", error)\n",
+        "\n"
       ],
-      "execution_count": 5,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "guess  1  =  10000000000.499996\n",
+            "error  1  =  0.4999961853027344\n",
+            "guess  2  =  10000000000.0\n",
+            "error  2  =  0.0\n",
+            "guess  3  =  10000000000.0\n",
+            "error  3  =  0.0\n",
+            "guess  4  =  10000000000.0\n",
+            "error  4  =  0.0\n",
+            "guess  5  =  10000000000.0\n",
+            "error  5  =  0.0\n",
+            "guess  6  =  10000000000.0\n",
+            "error  6  =  0.0\n",
+            "guess  7  =  10000000000.0\n",
+            "error  7  =  0.0\n",
+            "guess  8  =  10000000000.0\n",
+            "error  8  =  0.0\n",
+            "guess  9  =  10000000000.0\n",
+            "error  9  =  0.0\n",
+            "guess  10  =  10000000000.0\n",
+            "error  10  =  0.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4167,7 +4216,11 @@
         "id": "Bav0b9Xovg2B"
       },
       "source": [
-        "We may analytically "
+        "We may can analytically describe how the error of our guess changes with each iteration of our loop. Suppose that we are trying to approximate $\\sqrt{N}$, and our guess is $g = \\sqrt{N} + \\varepsilon$. After performing one loop of the above process, our new guess is \n",
+        "$$\\frac{1}{2} \\left(\\sqrt{N} + \\varepsilon + \\frac{N}{\\sqrt{N} + \\varepsilon} \\right)$$\n",
+        "Performing some algebraic manipulation, we can find that this quantity is equal to \n",
+        "$$\\sqrt{N} + \\frac{\\varepsilon^2 \\sqrt{N} - \\varepsilon^3}{2(N - \\varepsilon^2)}$$\n",
+        "which shows that when $\\varepsilon$ is very small compared to $N$, "
       ]
     },
     {
@@ -4186,13 +4239,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cH0ApCftU5yY"
+        "id": "cH0ApCftU5yY",
+        "outputId": "35143a21-7e44-4fa9-c1ad-7513cb0fa78b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "estimate = 0\n",
+        "coefficient = 1\n",
+        "term = 0\n",
+        "new_estimate = 1\n",
+        "while estimate != new_estimate:\n",
+        "  term = term + 1\n",
+        "  estimate = new_estimate\n",
+        "  coefficient = coefficient/term\n",
+        "  new_estimate = new_estimate + coefficient\n",
+        "print(estimate)\n",
+        "print(term)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2.7182818284590455\n",
+            "18\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4210,15 +4286,45 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "wYlwMQxBU5yY"
+        "id": "rDDMnm4-UIMf"
       },
       "source": [
-        "#  Approximate pi here!"
+        "Using the formula for a geometric series, we find that \n",
+        "$$ \\frac{1}{1+ x^2} = \\sum_{n = 0}^\\infty (-1)^{n}x^{2n} = 1 - x^2 + x^4 - \\cdots $$\n",
+        "Integrating term by term, we have \n",
+        "$$\\operatorname{atan}(x) = x - \\frac{x^3}{3} + \\frac{x^5}{5} - \\cdots$$\n",
+        "and setting $ x = 1$, we obtain the following series representation:\n",
+        "$$ \\frac{\\pi}{4} = \\sum_{n = 0}^\\infty \\frac{(-1)^n}{2n+1} = 1 - \\frac{1}{3} + \\frac{1}{5} - \\cdots$$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wYlwMQxBU5yY",
+        "outputId": "e8d9ae93-08d2-46b7-b072-f4990cfafed1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "terms = 100000\n",
+        "estimate = 0\n",
+        "for i in range(terms):\n",
+        "  estimate = estimate + (-1)**i/(2*i+1)\n",
+        "print(4*estimate)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3.1415826535897198\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4238,13 +4344,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "71EwcYnMU5yY"
+        "id": "71EwcYnMU5yY",
+        "outputId": "b383f088-353e-4be5-d4e0-2b0ac4a3ebc3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#  Approximate pi more quickly here!"
+        "from math import pi\n",
+        "estimate = 0\n",
+        "new_estimate = 4/5 - 1/239 \n",
+        "term = 1\n",
+        "while estimate != new_estimate:\n",
+        "  estimate = new_estimate\n",
+        "  new_estimate = estimate + 4 * (-1)**term * (1/5)**(2*term + 1)/(2 * term + 1) -  (-1)**term * (1/239)**(2*term + 1)/(2 * term + 1)\n",
+        "  term = term +1\n",
+        "print(term)\n",
+        "print(4*estimate)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12\n",
+            "3.141592653589794\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
