--- a/P4M_Notebook2.ipynb
+++ b/P4M_Notebook2.ipynb
@@ -87,7 +87,7 @@
         "    answer = x * x\n",
         "    return answer"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -107,19 +107,37 @@
       "source": [
         "from dis import dis"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6ZYvlyCYuXdl"
+        "id": "6ZYvlyCYuXdl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "abfc0d2d-192a-4e7c-cd23-7d44e847d6f7"
       },
       "source": [
         "dis(square)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  2           0 LOAD_FAST                0 (x)\n",
+            "              2 LOAD_FAST                0 (x)\n",
+            "              4 BINARY_MULTIPLY\n",
+            "              6 STORE_FAST               1 (answer)\n",
+            "\n",
+            "  3           8 LOAD_FAST                1 (answer)\n",
+            "             10 RETURN_VALUE\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -137,24 +155,58 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "J1Drx8OauXdm"
+        "id": "J1Drx8OauXdm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ad369049-84ff-439a-9cac-a042d57f6031"
       },
       "source": [
         "square(12)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "144"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RPfYsUfAuXdm"
+        "id": "RPfYsUfAuXdm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "548bb509-a50a-4a28-80e6-265d62a10550"
       },
       "source": [
         "square(1.5)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.25"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -199,7 +251,7 @@
         "    remainder = a % b #\n",
         "    print(\"{} = {} ({}) + {}\".format(a,quotient,b,remainder))"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -214,13 +266,46 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "44kJtTHJuXdn"
+        "id": "44kJtTHJuXdn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "11c7efc5-a5f6-4cbe-e827-43fe0ff192ed"
       },
       "source": [
         "dis(display_divmod)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  2           0 LOAD_FAST                0 (a)\n",
+            "              2 LOAD_FAST                1 (b)\n",
+            "              4 BINARY_FLOOR_DIVIDE\n",
+            "              6 STORE_FAST               2 (quotient)\n",
+            "\n",
+            "  3           8 LOAD_FAST                0 (a)\n",
+            "             10 LOAD_FAST                1 (b)\n",
+            "             12 BINARY_MODULO\n",
+            "             14 STORE_FAST               3 (remainder)\n",
+            "\n",
+            "  4          16 LOAD_GLOBAL              0 (print)\n",
+            "             18 LOAD_CONST               1 ('{} = {} ({}) + {}')\n",
+            "             20 LOAD_ATTR                1 (format)\n",
+            "             22 LOAD_FAST                0 (a)\n",
+            "             24 LOAD_FAST                2 (quotient)\n",
+            "             26 LOAD_FAST                1 (b)\n",
+            "             28 LOAD_FAST                3 (remainder)\n",
+            "             30 CALL_FUNCTION            4\n",
+            "             32 CALL_FUNCTION            1\n",
+            "             34 POP_TOP\n",
+            "             36 LOAD_CONST               0 (None)\n",
+            "             38 RETURN_VALUE\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -235,13 +320,25 @@
       "cell_type": "code",
       "metadata": {
         "scrolled": true,
-        "id": "-5N5Px0XuXdn"
+        "id": "-5N5Px0XuXdn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3b87fa85-e2e0-4652-aa2b-7eefb208d2a2"
       },
       "source": [
         "display_divmod(23,5)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "23 = 4 (5) + 3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -259,24 +356,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qYo13qoyuXdn"
+        "id": "qYo13qoyuXdn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e577d464-5fbe-4ea8-b28d-dea839766ab5"
       },
       "source": [
         "print(\"My favorite number is {}\".format(17))  # The .format \"method\" substitutes 17 for {}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "My favorite number is 17\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-XwFB1SBuXdo"
+        "id": "-XwFB1SBuXdo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7a2af4e8-1ae7-429b-a61b-392183fb93c1"
       },
       "source": [
         "print(\"{} + {} = {}\".format(13,12,13+12))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "13 + 12 = 25\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -290,7 +411,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IVmzfGzsuXdo"
+        "id": "IVmzfGzsuXdo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7c21de3a-7674-45e7-af0d-10b626bd06bc"
       },
       "source": [
         "print (\"The number {} comes before {}.\".format(1,2)) # This should be familiar.\n",
@@ -298,8 +423,18 @@
         "print (\"The number {1} comes before {1}.\".format(1,2)) # Got it now?\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The number 1 comes before 2.\n",
+            "The number 2 comes before 1.\n",
+            "The number 2 comes before 2.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -313,15 +448,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cDQWP_m4uXdo"
+        "id": "cDQWP_m4uXdo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "67788f53-a3b3-4143-c071-660d112e57af"
       },
       "source": [
         "print(\"pi is approximately {0}\".format(3.14159265))\n",
         "print(\"pi is approximately {0:f}\".format(3.14159265)) # The \"f\" in \"0:f\" formats the float.\n",
         "print(\"pi is approximately {0:0.3f}\".format(3.14159265)) # Choose 3 digits of precision.\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "pi is approximately 3.14159265\n",
+            "pi is approximately 3.141593\n",
+            "pi is approximately 3.142\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -335,7 +484,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WI4b7-z6uXdp"
+        "id": "WI4b7-z6uXdp",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 266
+        },
+        "outputId": "5100c4f4-74eb-4ed3-de15-b2d40a402eee"
       },
       "source": [
         "print(\"{:d} is a pretty big integer.\".format(2**100)) # d is the formatting code for integers.\n",
@@ -344,20 +498,54 @@
         "print(\"{:s} is a string.\".format('Hi there!')) # s is the formatting code for strings.\n",
         "print(\"{:d} will give us an error message.\".format(1/7))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1267650600228229401496703205376 is a pretty big integer.\n",
+            "1267650600228229401496703205376.000000 is an integer, formatted like a float.\n",
+            "0.142857 is a float, of course.\n",
+            "Hi there! is a string.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-14-a243553941ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{:f} is a float, of course.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{:s} is a string.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Hi there!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# s is the formatting code for strings.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{:d} will give us an error message.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: Unknown format code 'd' for object of type 'float'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xa4ug6SMuXdp"
+        "id": "Xa4ug6SMuXdp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "900b314a-cd3c-4c33-fb82-5f90a8aec858"
       },
       "source": [
         "from math import sqrt  # Make sure the square root function is loaded.\n",
         "print(\"The square root of {0:d} is about {1:f}.\".format(1000, sqrt(1000)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The square root of 1000 is about 31.622777.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -381,14 +569,99 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "J_WzLsqwuXdp"
+        "id": "u12wdUpqCLJC"
       },
       "source": [
-        "#  Use this space to work on the Exercises.  \n",
-        "#  Remember that you can add a new cell above/below by clicking to the left of a cell,\n",
-        "#  (the cell will have a blue bar at the left) and then pressing \"a\" or \"b\" on the keyboard.\n"
+        "1. Python signals scope using colons and indentation.\n",
+        "\n",
+        "2. See below.\n",
+        "\n",
+        "3. See below.\n",
+        "\n",
+        "4. See below\n",
+        "\n",
+        "5. \n",
+        "\n",
+        "6. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J_WzLsqwuXdp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4b5c38f8-061f-45e1-c6d2-567340f8b75e"
+      },
+      "source": [
+        "from math import pi\n",
+        "def area_circle(radius):\n",
+        "  area = pi*radius**2\n",
+        "  print(\"The area of a circle of radius {} is {}\".format(radius, area))\n",
+        "  return area\n",
+        "area_circle(1)\n"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The area of a circle of radius 1 is 3.141592653589793\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.141592653589793"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X7r6-JbnFzyj",
+        "outputId": "5631b19c-a8c6-4fd2-e0ee-762759b63542",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "def factorial(n):\n",
+        "  product = 1\n",
+        "  for i in range(1,n+1):\n",
+        "    product = product * i\n",
+        "  return product\n",
+        "print(factorial(7))"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5040\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dcAUtZfwGIY3"
+      },
+      "source": [
+        "\"Python\".replace(\"yth\",\"arag\")"
       ],
       "execution_count": null,
       "outputs": []
